dataset processing library added

--- a/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
@@ -46,10 +46,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-24 06:44:46,740 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
-      "2025-08-24 06:44:46,741 - HiggsML.datasets     - INFO     - Current working directory: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau\n",
-      "2025-08-24 06:44:46,796 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
-      "2025-08-24 06:44:46,796 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
+      "2025-08-29 06:09:42,961 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
+      "2025-08-29 06:09:42,963 - HiggsML.datasets     - INFO     - Current working directory: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau\n",
+      "2025-08-29 06:09:43,030 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
+      "2025-08-29 06:09:43,031 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
      ]
     }
    ],
@@ -66,8 +66,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-24 06:45:05,548 - HiggsML.datasets     - INFO     - Selected train size: 53924279\n",
-      "2025-08-24 06:48:04,463 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
+      "2025-08-29 06:09:59,687 - HiggsML.datasets     - INFO     - Selected train size: 53924279\n",
+      "2025-08-29 06:13:00,301 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
      ]
     }
    ],
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "detailed_labels\n",
-       "ztautau    34428170\n",
-       "htautau    17847805\n",
-       "ttbar       1517997\n",
+       "ztautau    34427142\n",
+       "htautau    17850135\n",
+       "ttbar       1517483\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,27 +203,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some common analysis selections to remove low-stats regions\n",
+    "selections = \"DER_mass_transverse_met_lep <= 250.0 and \\\n",
+    "            DER_mass_vis <= 500.0 \\\n",
+    "            and DER_sum_pt <= 1000 and \\\n",
+    "            DER_pt_tot <= 250 and \\\n",
+    "            DER_deltar_had_lep <= 4.5 and \\\n",
+    "            DER_pt_h <= 400 and \\\n",
+    "            DER_pt_ratio_lep_had <= 9.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "for sample in dataset_dict.keys():\n",
     "\n",
-    "    for process in list_of_processes_to_model:\n",
+    "    # Write to ROOT TTree\n",
+    "    with uproot.recreate(f\"{saved_datasets}dataset_{sample}.root\") as ntuple:\n",
     "\n",
-    "        df = dataset_dict[sample]\n",
-    "        \n",
-    "        df_process = df[df[\"detailed_labels\"] == process].copy()\n",
+    "        for process in list_of_processes_to_model:\n",
     "\n",
-    "        columns_to_keep = df_process.columns.tolist()\n",
+    "            df = dataset_dict[sample]\n",
+    "            \n",
+    "            df_process = df[df[\"detailed_labels\"] == process].copy()\n",
     "\n",
-    "        columns_to_keep = list(set(columns_to_keep) - set([\"detailed_types\"]))\n",
+    "            df_process = df_process.query(selections).copy()\n",
     "\n",
-    "        arrays = {col: df_process[col].to_numpy() for col in columns_to_keep}\n",
+    "            columns_to_keep = df_process.columns.tolist()\n",
     "\n",
-    "        # Write to ROOT TTree\n",
-    "        with uproot.recreate(f\"{saved_datasets}dataset_{sample}.root\") as f:\n",
-    "            f[f\"tree_{process}\"] = arrays"
+    "            columns_to_keep = list(set(columns_to_keep) - set([\"detailed_types\"]))\n",
+    "\n",
+    "            arrays = {col: df_process[col].to_numpy() for col in columns_to_keep}\n",
+    "\n",
+    "            ntuple[f\"tree_{process}\"] = arrays"
    ]
   }
  ],
