bug fix dataset saving

--- a/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-29 06:09:42,961 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
-      "2025-08-29 06:09:42,963 - HiggsML.datasets     - INFO     - Current working directory: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau\n",
-      "2025-08-29 06:09:43,030 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
-      "2025-08-29 06:09:43,031 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
+      "2025-08-29 11:24:18,515 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
+      "2025-08-29 11:24:18,516 - HiggsML.datasets     - INFO     - Current working directory: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau\n",
+      "2025-08-29 11:24:18,532 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
+      "2025-08-29 11:24:18,532 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
      ]
     }
    ],
@@ -59,15 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-29 06:09:59,687 - HiggsML.datasets     - INFO     - Selected train size: 53924279\n",
-      "2025-08-29 06:13:00,301 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
+      "2025-08-29 11:24:33,809 - HiggsML.datasets     - INFO     - Selected train size: 53924279\n",
+      "2025-08-29 11:28:25,893 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,20 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "detailed_labels\n",
-       "ztautau    34427142\n",
-       "htautau    17850135\n",
-       "ttbar       1517483\n",
+       "ztautau    34427442\n",
+       "htautau    17849501\n",
+       "ttbar       1517669\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
     "\n",
     "            columns_to_keep = df_process.columns.tolist()\n",
     "\n",
-    "            columns_to_keep = list(set(columns_to_keep) - set([\"detailed_types\"]))\n",
+    "            columns_to_keep = list(set(columns_to_keep) - set([\"detailed_labels\"]))\n",
     "\n",
     "            arrays = {col: df_process[col].to_numpy() for col in columns_to_keep}\n",
     "\n",
