--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-29 06:18:15,160 - nsbi_common_utils.configuration - INFO     - Opening config file config.yml\n"
+      "2025-08-29 11:40:14,570 - nsbi_common_utils.configuration - INFO     - Opening config file config.yml\n"
      ]
     }
    ],
@@ -61,44 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Name': 'htautau',\n",
-       "  'Tree': 'tree_htautau',\n",
-       "  'SamplePath': 'saved_datasets/dataset_nominal.root',\n",
-       "  'Weight': 'weights',\n",
-       "  'UseAsReference': True,\n",
-       "  'UseAsBasis': True},\n",
-       " {'Name': 'ttbar',\n",
-       "  'Tree': 'tree_ttbar',\n",
-       "  'SamplePath': 'saved_datasets/dataset_nominal.root',\n",
-       "  'Weight': 'weights',\n",
-       "  'UseAsReference': True,\n",
-       "  'UseAsBasis': True},\n",
-       " {'Name': 'ztautau',\n",
-       "  'Tree': 'tree_ztautau',\n",
-       "  'SamplePath': 'saved_datasets/dataset_nominal.root',\n",
-       "  'Weight': 'weights',\n",
-       "  'UseAsReference': False,\n",
-       "  'UseAsBasis': True}]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config.config[\"Samples\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -245,20 +208,19 @@
        "['tree_htautau;1', 'tree_ztautau;1', 'tree_ttbar;1']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import uproot\n",
-    "f = uproot.open(\"saved_datasets/dataset_nominal.root\")  # should succeed\n",
+    "f = uproot.open(\"saved_datasets/dataset_nominal.root\")\n",
     "list(f.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
