--- a/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
+++ b/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
@@ -2,35 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-08-11 07:46:11.761331: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-08-11 07:46:11.773609: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-08-11 07:46:11.784830: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-08-11 07:46:11.788561: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-08-11 07:46:11.797483: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os, sys, pathlib, importlib\n",
     "sys.path.append('../')\n",
     "\n",
     "# Load the package and modules for training and plotting\n",
     "import nsbi_common_utils\n",
-    "from nsbi_common_utils import plotting, training\n",
+    "from nsbi_common_utils import plotting, training, datasets, configuration\n",
     "from nsbi_common_utils.training import TrainEvaluate_NN, TrainEvaluatePreselNN\n",
     "\n",
     "\n",
@@ -59,119 +40,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "## TODOs\n",
     "## read from a serialized config file, \"we\" convert it into some object from a well-defined class, \n",
     "## user modify the object as user needs, and then at the end of the step, \"we\" write again to the serialized config\n",
     "## define mutable vs immutable information\n",
     "\n",
-    "config = nsbi_common_utils.configuration.load(\"config.yml\")"
+    "config = nsbi_common_utils.configuration.ConfigManager(file_path_string = './config.yml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_PREFIX = config[\"PATH_PREFIX\"]\n",
-    "PATH_TO_SAVED_DATA = config[\"PATH_SAVED_DATA\"]\n",
-    "\n",
-    "PATH_PRESEL_MODEL = PATH_TO_SAVED_DATA + 'preselection_model/'\n",
-    "\n",
-    "config.update(\n",
-    "    {\n",
-    "        \"PATH_PRESEL_MODEL\": PATH_PRESEL_MODEL\n",
-    "    }\n",
-    ")"
+    "input_features_training = config.config['TrainingFeatures']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['htautau']\n",
-      "['ttbar', 'ztautau']\n"
-     ]
-    }
-   ],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(sys.modules['nsbi_common_utils.datasets'])\n",
+    "from nsbi_common_utils import datasets\n",
+    "\n",
+    "Datasets = nsbi_common_utils.datasets.datasets(config = config.config,\n",
+    "                                                branches_to_load = input_features_training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_PRESEL_MODEL = './saved_data/preselection_model/'\n",
+    "\n",
+    "# If the preselection NN has already been trained and saved, load from the saved model\n",
+    "USE_SAVED_MODEL_PRESEL = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the dictionary of labels to processes\n",
-    "labels_dict = config[\"PROCESS_TO_INT_LABELS_DICT\"]\n",
-    "\n",
-    "# Signal processes in the model\n",
-    "signal_processes = config[\"SIGNAL_PROCESSES\"]\n",
-    "\n",
-    "# Background processes in the model\n",
-    "background_processes = config[\"BACKGROUND_PROCESSES\"]\n",
-    "\n",
-    "print(signal_processes)\n",
-    "print(background_processes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# If the preselection NN has already been trained and saved, load from the saved model\n",
-    "USE_SAVED_MODEL_PRESEL = True\n",
+    "labels_dict = {0: \"htautau\",\n",
+    "                1: \"ttbar\",\n",
+    "                2: \"ztautau\"}\n",
     "\n",
     "# Input features for training\n",
-    "features = config[\"TRAINING_FEATURES\"]\n",
-    "\n",
-    "# Subset of the features to standardize before training\n",
-    "features_scaling = config[\"TRAINING_FEATURES_TO_SCALE\"]\n"
+    "features, features_scaling = config.get_training_features()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the nominal dataset saved from the pre-processing notebook\n",
-    "\n",
-    "path_to_nominal_dataframe = config[\"PATH_TO_nominal_DATA\"]\n",
-    "dataset_incl_nominal = pd.read_hdf(path_to_nominal_dataframe, key=\"dataset\", mode='r')"
+    "dataset_incl_nominal = Datasets.load_datasets_from_config(load_systematics = False)[\"Nominal\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load the MC/data weights and training labels identifying different processes\n",
@@ -181,12 +123,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tree_htautau;1', 'tree_ttbar;1', 'tree_ztautau;1']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "import uproot\n",
+    "f = uproot.open(\"saved_datasets/dataset_nominal.root\")\n",
+    "list(f.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Normalizing the training weights - only discriminating shapes\n",
@@ -224,12 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -246,12 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -283,12 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "importlib.reload(sys.modules['nsbi_common_utils.training'])\n",
@@ -304,12 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true,
-    "vscode": {
-     "languageId": "plaintext"
-    }
+    "scrolled": true
    },
    "outputs": [
     {
@@ -354,12 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -429,12 +370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -468,12 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
