--- a/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
+++ b/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
@@ -11,13 +11,12 @@
      "text": [
       "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-08-31 22:02:53.887753: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-08-31 22:02:54.065590: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1756677774.090160 3575362 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1756677774.109598 3575362 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-08-31 22:02:54.316718: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE3 SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-08-31 23:33:49.368795: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-08-31 23:33:49.385590: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-08-31 23:33:49.401307: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-08-31 23:33:49.406049: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-08-31 23:33:49.418378: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -164,9 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "880/880 - 6s - 6ms/step - accuracy: 0.7785 - loss: 3.4916e-07 - val_accuracy: 0.7902 - val_loss: 3.3411e-07 - learning_rate: 0.1000\n",
+      "Epoch 2/50\n",
+      "880/880 - 3s - 3ms/step - accuracy: 0.7948 - loss: 3.2823e-07 - val_accuracy: 0.7994 - val_loss: 3.2174e-07 - learning_rate: 0.1000\n",
+      "Epoch 3/50\n"
+     ]
+    }
+   ],
    "source": [
     "importlib.reload(sys.modules['nsbi_common_utils.training'])\n",
     "from nsbi_common_utils.training import TrainEvaluatePreselNN\n",
@@ -174,7 +185,7 @@
     "PATH_PRESEL_MODEL = './saved_data/preselection_model/'\n",
     "\n",
     "# If the preselection NN has already been trained and saved, load from the saved model\n",
-    "USE_SAVED_MODEL_PRESEL = True\n",
+    "USE_SAVED_MODEL_PRESEL = False\n",
     "\n",
     "features, features_scaling = config.get_training_features()\n",
     "\n",
@@ -196,28 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.22.0'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import onnxruntime\n",
-    "onnxruntime.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -362,21 +352,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hist_NN_output' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m train_label_sample_dict:  \n\u001b[0;32m----> 2\u001b[0m     hep\u001b[38;5;241m.\u001b[39mhistplot(\u001b[43mhist_NN_output\u001b[49m[key], bins \u001b[38;5;241m=\u001b[39m bins, \n\u001b[1;32m      3\u001b[0m              alpha \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.6\u001b[39m, label \u001b[38;5;241m=\u001b[39m key, \n\u001b[1;32m      4\u001b[0m              density \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, linewidth \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2.0\u001b[39m, \n\u001b[1;32m      5\u001b[0m                  yerr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(hist_NN_output_errs[key]))\n\u001b[1;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPreselection Score\u001b[39m\u001b[38;5;124m\"\u001b[39m, size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m18\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m preselection_cuts:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'hist_NN_output' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key in train_label_sample_dict:  \n",
     "    hep.histplot(hist_NN_output[key], bins = bins, \n",
@@ -675,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
