binned workspace working, new Config structure systematics unbinned

--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -23,14 +23,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-07-12 16:23:38.036866: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1752337418.049450     146 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1752337418.053265     146 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-07-12 16:23:38.067502: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-09-03 09:44:26.744010: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-09-03 09:44:26.759018: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-09-03 09:44:26.774742: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-09-03 09:44:26.779482: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-09-03 09:44:26.792022: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "# sys.path.append('../')\n",
     "\n",
     "import nsbi_common_utils\n",
-    "from nsbi_common_utils import plotting, training, inference\n",
+    "from nsbi_common_utils import plotting, training, inference, datasets, configuration, workspace_builder\n",
     "import glob\n",
     "import numpy as np\n",
     "\n",
@@ -64,6 +64,153 @@
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)\n",
     "\n",
     "hep.style.use(hep.style.ATLAS)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "96620280-2323-4d43-8a64-41ec1961f431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(sys.modules['nsbi_common_utils.configuration'])\n",
+    "from nsbi_common_utils import configuration\n",
+    "\n",
+    "config = nsbi_common_utils.configuration.ConfigManager(file_path_string = './config.yml')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "87d5bc53-25ef-40e2-b3f0-98e8117d5f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(sys.modules['nsbi_common_utils.workspace_builder'])\n",
+    "from nsbi_common_utils import workspace_builder\n",
+    "\n",
+    "workspace = nsbi_common_utils.workspace_builder.WorkspaceBuilder(config_path = './config.yml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e783c1db-f3d1-4f0c-9ef8-55e7a381a1fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'channels': [{'name': 'CR',\n",
+       "   'type': 'binned',\n",
+       "   'samples': [{'name': 'htautau',\n",
+       "     'data': [0.002012479, 0.7653829, 12.834314, 149.31921],\n",
+       "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.0, 1.0051001, 1.0034993, 0.98409724],\n",
+       "        'lo_data': [1.0, 0.96406597, 1.0036646, 1.0195373]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [0.6662321, 0.9656578, 0.9974099, 0.9602834],\n",
+       "        'lo_data': [1.6656798, 1.019282, 1.003821, 1.0436983]}}]},\n",
+       "    {'name': 'ttbar',\n",
+       "     'data': [9.635638, 3993.2388, 23286.73, 10437.047],\n",
+       "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.0694268, 1.0184535, 1.0020416, 0.988056],\n",
+       "        'lo_data': [0.9728497, 0.981324, 0.99724597, 1.0121633]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [0.93052167, 0.98057765, 1.0036484, 1.0027449],\n",
+       "        'lo_data': [1.102705, 1.0193546, 0.99631566, 0.9968451]}}]},\n",
+       "    {'name': 'ztautau',\n",
+       "     'data': [1.3210382, 62.74932, 9216.265, 663597.44],\n",
+       "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.0, 1.0315789, 0.9086933, 0.9901053],\n",
+       "        'lo_data': [0.5, 0.9157894, 1.1045654, 1.0095873]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.0, 0.91578954, 0.9716906, 0.9719249],\n",
+       "        'lo_data': [0.5, 1.0421052, 1.0258726, 1.0265634]}}]}]},\n",
+       "  {'name': 'SR_binned',\n",
+       "   'type': 'binned',\n",
+       "   'samples': [{'name': 'htautau',\n",
+       "     'data': [1.0182981],\n",
+       "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.2613693], 'lo_data': [0.78990513]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.0223161], 'lo_data': [0.96393085]}}]},\n",
+       "    {'name': 'ttbar',\n",
+       "     'data': [0.2329546],\n",
+       "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.4994713], 'lo_data': [1.1251335]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.1251335], 'lo_data': [1.0]}}]},\n",
+       "    {'name': 'ztautau',\n",
+       "     'data': [8.586748],\n",
+       "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.076923], 'lo_data': [0.7692308]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [0.923077], 'lo_data': [0.923077]}}]}]},\n",
+       "  {'name': 'SR',\n",
+       "   'type': 'unbinned',\n",
+       "   'samples': [{'name': 'htautau',\n",
+       "     'data': [1.0182981],\n",
+       "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.2613693], 'lo_data': [0.78990513]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.0223161], 'lo_data': [0.96393085]}}]},\n",
+       "    {'name': 'ttbar',\n",
+       "     'data': [0.2329546],\n",
+       "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.4994713], 'lo_data': [1.1251335]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.1251335], 'lo_data': [1.0]}}]},\n",
+       "    {'name': 'ztautau',\n",
+       "     'data': [8.586748],\n",
+       "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
+       "      {'name': 'JES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [1.076923], 'lo_data': [0.7692308]}},\n",
+       "      {'name': 'TES',\n",
+       "       'type': 'histosys',\n",
+       "       'data': {'hi_data': [0.923077], 'lo_data': [0.923077]}}]}]}],\n",
+       " 'measurements': [{'name': 'higgs_tautau_signal_strength',\n",
+       "   'config': {'parameters': [{'name': 'mu_htautau',\n",
+       "      'inits': [1],\n",
+       "      'bounds': [[0, 10]]},\n",
+       "     {'name': 'mu_ztautau', 'inits': [1], 'bounds': [[0, 10]]},\n",
+       "     {'name': 'mu_ttbar', 'inits': [1], 'bounds': [[0, 10]]}],\n",
+       "    'poi': 'mu_htautau'}}],\n",
+       " 'version': '1.0.0'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "workspace.build()"
    ]
   },
   {
@@ -733,7 +880,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nsbi_env_newish",
+   "display_name": "nsbi_env",
    "language": "python",
    "name": "nsbi_env"
   },
@@ -747,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
